--- a/css/base.css
+++ b/css/base.css
@@ -111,17 +111,20 @@ body {
 
  }
 
+.logo h3 {
+  text-transform: uppercase;
+}
+
  .logo p {
  	margin-top: 5%;
  	font-family: 'freight-text-pro', Georgia, serif;
  	font-size: 0.8em;
  	font-weight: 400;
- 	text-align: center;
  }
 
  .logo a {
  	text-decoration: none;
- 	color: #fff;
+ 	color: #323232;
  }
 
  .spacer {
