--- a/css/base.css
+++ b/css/base.css
@@ -84,6 +84,7 @@ body {
  .logo_container {
   display: table;
   margin: 0 auto;
+  margin-bottom: 5%;
   height: 100%;
   width: 40%;
  }
@@ -107,12 +108,13 @@ body {
 
  .logo img {
   width: 100%;
-    margin-top: 20%;
+    margin-top: 5%;
 
  }
 
 .logo h3 {
   text-transform: uppercase;
+  margin-top: 5%;
 }
 
  .logo p {
@@ -124,7 +126,8 @@ body {
 
  .logo a {
  	text-decoration: none;
- 	color: #323232;
+  color: #292929;
+  font-style: italic;
  }
 
  .spacer {
